--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ General styles
 
 body {
   font-family: 'Merriweather', serif;
-  color: #9da3a8;
+  color: rgb(157, 163, 168);
 }
 
 #wrapper {
@@ -98,7 +98,7 @@ legend {
 label {
   display: block;
   margin-bottom: 15px;
-  color: #9da3a8;
+  color: rgb(157, 163, 168);
 }
 
 input[type=text],
@@ -114,7 +114,7 @@ textarea {
   width: 100%;
   border-radius: 5px;
   background-color: #eff0f1;
-  color: #9da3a8;
+  color: rgb(157, 163, 168);
   margin-bottom: 20px;
   transition-duration: .5s;
 }
@@ -124,25 +124,25 @@ input[id="zip"] {
 }
 
 input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  opacity: 0.5;
+  color: rgba(157, 163, 168, 0.5);
   text-align: right;
   font-style: italic;
 }
 
 input::-moz-placeholder { /* Firefox 19+ */
-  opacity: 0.5;
+  color: rgba(157, 163, 168, 0.5);
   text-align: right;
   font-style: italic;
 }
 
 input:-moz-placeholder { /* --- Older versions of Firefox --- */
-  opacity: 0.5;
+  color: rgba(157, 163, 168, 0.5);
   text-align: right;
   font-style: italic;
 }
 
 input:-ms-input-placeholder { /* IE 10+ */
-  opacity: 0.5;
+  color: rgba(157, 163, 168, 0.5);
   text-align: right;
   font-style: italic;
 }
@@ -188,9 +188,8 @@ textarea:focus {
 input:hover,
 select:hover,
 textarea:hover {
-  box-shadow:0px 0px 10px black;
+  box-shadow: 0px 0px 10px black;
   transition-duration: .5s;
-  opacity: .5;
 }
 
 button {
@@ -241,4 +240,3 @@ button:hover {
   }
 
 }
-
